--- a/style.css
+++ b/style.css
@@ -1,28 +1,48 @@
 body {
     display: flex;
     justify-content: center;
-    align-items: center;
+    background-color: #858585;
 }
 .calculator-body {
-    align-items: center;
-    justify-content:start;
     display: flex;
     flex-direction: column;
     border: solid;
     border-radius: 20px;
     padding: 20px;
     height: 500px;
+    background-color: rgba(255, 255, 255, 0.664);
 }
 
 .calculator-screen {
     background-color: rgb(186, 216, 255);
-    width: 500px;
+    width: 452px;
     height: 100px;
+    font-size: 90px;
+    font-family: 'Courier New', Courier, monospace;
+    text-align: right;
 }
 
 .calculator-buttons {
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
-    width: 500px;
+    align-items: center;
+    margin-top: 50px;
+}
+
+button {
+    width: 90px;
+    height: 50px;
+    margin: 10px;
+    color: #000000;
+    font-size: 19px;
+    border-radius: 5px;
+}
+
+.divide,.multiply,.minus,.add {
+    background-color: #909090;
+    outline: none;
+}
+
+.equals {
+    background-color: #ff8040;
 }
